# ase-fileio

./: CMakeLists.txt  README.md  VERSION
include/ase/fileio/: text_reader.hpp  version.hpp.in
